add user request endpoint
